--- a/inst/doc/dlnmOverview.Rnw
+++ b/inst/doc/dlnmOverview.Rnw
@@ -238,7 +238,7 @@ Different independent choices regarding the basis for each one of the two dimens
 \begin{itemize}
 	\item \Rcode{"ns"}: natural cubic B-splines (constrained to be linear beyond the boundary knots). This is the default \Rarg{type} for both the dimensions. Specified by \Rarg{knots} (internal knots) and \Rarg{bound} (boundary or external knots), calling the functions \Rfun{ns} of the package \Rpkg{splines} (type \Rcomm{?ns} in \R{} for additional information). If \Rarg{knots} is provided, the dimension \Rarg{df} is set to \Rcode{length(knots)+int+1}. An intercept is included if \Rcode{int=TRUE}. For the basis in the space of the predictor, the transformed variables can be centered at \Rarg{cenvalue} if \Rcode{cen=TRUE} (the default).
 
-	\item \Rcode{"bs"}: B-splines characterized by \Rarg{degree} (degree of the piecewise polynomial). Specified by \Rarg{knots} (internal knots) and \Rarg{bound} (boundary or external knots), calling the functions \Rfun{bs} of the package \Rpkg{splines} (type \Rcomm{?bs} in \R{} for additional information). If \Rarg{knots} is provided, the dimension \Rarg{df} is set to \Rcode{length(knots)+degree+int}, with the constraint that \Rarg{df>=degree+int}. An intercept is included if \Rcode{int=TRUE}. For the basis in the space of the predictor, the transformed variables can be centered at \Rarg{cenvalue} if \Rcode{cen=TRUE} (the default).
+	\item \Rcode{"bs"}: B-splines characterized by \Rarg{degree} (degree of the piecewise polynomial). Specified by \Rarg{knots} (internal knots) and \Rarg{bound} (boundary or external knots), calling the functions \Rfun{bs} of the package \Rpkg{splines} (type \Rcomm{?bs} in \R{} for additional information). If \Rarg{knots} is provided, the dimension \Rarg{df} is set to \Rcode{length(knots)+degree+int}; if not, \Rarg{df} must be higher than \Rcode{degree+int}. An intercept is included if \Rcode{int=TRUE}. For the basis in the space of the predictor, the transformed variables can be centered at \Rarg{cenvalue} if \Rcode{cen=TRUE} (the default).
 
 	\item \Rcode{"strata"}: strata variables (dummy parameterization) determined by internal cut-off values specified in \Rarg{knots}, which represent the lower boundaries for the right-open intervals. Intervals containing no observation are automatically discarded. If \Rarg{knots} is provided, the dimension \Rarg{df} is set to \Rcode{length(knots)+int}. A dummy variable for the reference stratum (the first one by default) is included if \Rcode{int=TRUE}, generating a full rank basis. The related basis functions are never centered.
 	
